--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,33 @@
 </head>
 <body>
 
-  Welcome to the HTML Portfolio Project
+  <header class="header">
+  	<h1>
+  		Lokesh kumar jain
+  	</h1>
+  	<h2>
+  		Software Engineer
+  	</h2>
+  </header>
+
+  <div class="tagline">
+	I love Learning at CodeSchool.  	
+  </div>
+  <div class="skills">
+  	<h3>I enjoy writing front-end code with these technologies</h3>
+  	<ul>
+  		<li>HTML</li>
+  		<li>CSS</li>
+  		<li>JavaScript</li>
+  		<li>Angular 1.x</li>
+  		<li>Angular 2.x</li>
+  	</ul>
+  </div>
+
+  <div class="contact">
+  <h3>Follow me on </h3>
+  	<a href="https://twitter.com/lokeshjain2008">Twitter</a>
+  </div>
 
 </body>
 </html>
