--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,11 @@
   </header>
 
   <div class="tagline">
-	I love Learning at CodeSchool.  	
+	<h3>I love Learning at CodeSchool.</h3>  	
   </div>
   <div class="skills">
-  	<h3>I enjoy writing front-end code with these technologies</h3>
+  <h3>My Skills</h3>
+  	<p>I enjoy writing front-end code with these technologies</p>
   	<ul>
   		<li>HTML</li>
   		<li>CSS</li>
@@ -33,7 +34,7 @@
 
   <div class="contact">
   <h3>Follow me on </h3>
-  	<a href="https://twitter.com/lokeshjain2008">Twitter</a>
+  	<p><a href="https://twitter.com/lokeshjain2008">Twitter</a></p>
   </div>
 
 </body>
