--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
 
   <div class="tagline">
 	<h3>I love Learning at CodeSchool.</h3>  	
+	<p>Hey you guys have done a great job creating this interface.</p>
   </div>
   <div class="skills">
   <h3>My Skills</h3>
